# data_project

./: pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
app/utils/: absenteeism_generator.py
data/output/: output.xlsx
test/: test_pipelyne.py
