[project]
name = "data-project"
version = "0.1.0"
description = "projeto ETL"
authors = [
    {name = "gabrterra",email = "gabrterra@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.3"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
